# oz_bank

./: .env.dev  .env.prod  .gitignore  .gitmessage.txt  .python-version  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question_template.yml  task_template.yml
.github/workflows/: checks.yml  ci.yml
account/: models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_rename_user_id_account_user.py
analysis/: models.py
analysis/migrations/: 0001_initial.py  0002_alter_analysis_analysis_about_and_more.py
app/: manage.py
app/account/: models.py  urls.py
app/analysis/: urls.py
app/config/settings/: base.py  dev.py  prod.py
app/config/urls/: urls_prod.py
app/tests/models/: notification_test.py
app/transaction/: urls.py
app/users/: models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/utils/: email.py
apps/: manage.py
apps/account/: models.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/analysis/: models.py  urls.py
apps/config/: wsgi.py
apps/config/settings/: base.py  dev.py  prod.py
apps/config/urls/: __init__.py  urls_dev.py  urls_prod.py
apps/core/management/commands/: wait_for_db.py
apps/templates/: oauth_login.html
apps/tests/models/: account_test.py  analysis_test.py  notification_test.py  transaction_test.py  user_test.py
apps/transaction/: models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  oauth_views.py  serializers.py  urls.py  views.py
apps/utils/: email.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
config/urls/: urls_dev.py
scripts/: run.sh
tests/: tests.py  urls.py  views.py
tests/models/: __init__.py  account_test.py  analysis_test.py  transaction_test.py  user_test.py
transaction/: models.py  urls.py  views.py
transaction/migrations/: 0001_initial.py  0002_transaction_account.py  0003_alter_transaction_transaction_method_and_more.py
users/: jwt_view.py  models.py  oauth_views.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_notification.py
utils/: email.py  permissions.py
