[project]
name = "config" # startProject 로 설정한 이름을 넣어줌.
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
[tool.poetry.dependencies]
python = "^3.13"
django = ">=5.1.7,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
drf-spectacular = "^0.28.0"

